--- a/index.html
+++ b/index.html
@@ -26,24 +26,61 @@
       <div
         class="navbar title border-secondary border-bottom d-flex justify-content-between align-items-center"
       >
-        <div class="fs-3 px-4 pt-3">
-          <p class="m-0">PROFILE VIEWER</p>
+        <div class="fs-4 px-4 pt-3">
+          <p class="m-0">GITHUB USER DETAILS</p>
         </div>
-        <div class="fs-5 px-4 pt-3">
-          <p class="m-0">Github User Details</p>
+        <div class="fs-7 px-4 pt-3">
+          <p class="m-0">Profile Viewer</p>
         </div>
       </div>
-      <div class="app-info">
-        <p class="fs-4 mt-5">
-          Please give the username instead of full name to get started
-        </p>
+      <div class="app-info w-50 container text-center">
+        <p class="fs-4 mt-5"></p>
       </div>
       <div class="error-msg-empty mt-4">
-        <div class="fs-4">Please provide the information</div>
+        <div class="fs-4">Please enter the username</div>
       </div>
-      <div class="error-msg-network mt-4">
-        <div class="fs-4">Error: Network connection lost</div>
+      <div
+        class="network-error error-modal error-modal-popup p-2 text-center d-flex justify-content-start align-items-center d-none"
+      >
+        <div class="error-modal-brdr bg-danger"></div>
+        <img
+          src="img/network-error.png"
+          class="ms-3"
+          alt=""
+          width="45px"
+          height="45px"
+        />
+        <div class="text-start ms-3">
+          <h4 class="error-modal-description d-inline-block m-0">Error</h4>
+          <p class="error-modal-description m-0 fs-6">
+            Network connection lost
+          </p>
+        </div>
+        <div class="error-modal-btn">
+          <button class="btn reload me-3">Refresh</button>
+        </div>
       </div>
+      <div
+        class="user-error error-modal error-modal-popup p-2 text-center d-flex justify-content-start align-items-center d-none"
+      >
+        <div class="error-modal-brdr bg-danger"></div>
+        <img
+          src="img/error.png"
+          class="ms-3"
+          alt=""
+          width="45px"
+          height="45px"
+        />
+        <div class="text-start ms-3">
+          <h4 class="error-modal-description d-inline-block m-0">Error</h4>
+          <p class="error-modal-description m-0 fs-6">Couldn't find the user</p>
+        </div>
+        <div class="try-again error-modal-btn">
+          <button class="btn tryagn me-3">Try Again</button>
+        </div>
+      </div>
+      <div class="overlay d-none"></div>
+
       <div class="welcome-msg-popup">
         <img
           src="img/avatar.png"
@@ -106,7 +143,7 @@
             </li>
           </ul>
         </div>
-        <div class="view my-5">
+        <div class="view mt-2 mb-4">
           <a href="" target="_blank" id="view">
             <button type="submit" class="btn rounded-pill p-3" id="">
               Github Profile <i class="fas fa-external-link-alt"></i>
