--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="main.js" defer></script>
     <title>GITHUB USER DETAILS</title>
   </head>
@@ -26,11 +27,14 @@
       <div
         class="navbar title border-secondary border-bottom d-flex justify-content-between align-items-center"
       >
-        <div class="fs-4 px-4 pt-3">
-          <p class="m-0">GITHUB USER DETAILS</p>
+        <div
+          class="fs-4 px-4 pt-3 d-flex justify-content-center align-items-center"
+        >
+          <div class="logo"></div>
+          <p class="m-0 ms-2">VIEWER BEAM</p>
         </div>
         <div class="fs-7 px-4 pt-3">
-          <p class="m-0">Profile Viewer</p>
+          <p class="m-0">Github User Details</p>
         </div>
       </div>
       <div class="app-info w-50 container text-center">
