--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="main.js" defer></script>
-    <title>GITHUB USER DETAILS</title>
+    <title>VIEWER BEAM: GET GITHUB USER DETAILS</title>
   </head>
 
   <body>
