hidden limit error modal

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div
-        class="limit-error error-modal error-modal-popup p-2 text-center d-flex justify-content-start align-items-center"
+        class="limit-error error-modal error-modal-popup p-2 text-center d-flex justify-content-start align-items-center d-none"
       >
         <div class="error-modal-brdr bg-danger"></div>
         <img
