dark mode update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>VIEWER BEAM: GET GITHUB USER DETAILS</title>
   </head>
 
-  <body class="normalmode">
+  <body>
     <section class="vessel text-center">
       <div
         class="navbar title border-secondary border-bottom d-flex justify-content-between align-items-center"
